# simple-qc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  sQC-summary.iscsv
.github/workflows/: main.yml  release.yml  test.yml
src/: cli.rs  fasta.rs  fastq.rs  input.rs  io.rs  main.rs  output.rs  parser.rs  qscores.rs  sequence.rs  stats.rs
test_files/: contigs-interleaved.fasta  contigs.fasta  contigs_spaced.fasta  invalid.fasta  invalid2.fastq
