[package]
name = "simple-qc"
version = "0.1.1"
authors = ["Heru Handika <herubiolog@gmail.com>"]
description = "A quality control cli app for high-throughput sequencing data"
edition = "2018"
readme = "README.md"
repository = "https://github.com/hhandika/simple-qc"
license = "MIT"
categories = ["command-line-utilities", "science"]

[dependencies]
clap = "2.33.3"
flate2 = "1.0.19"
glob = "0.3.0"
rayon = "1.5.0"
num-format = "0.4.0"

[profile.release]
lto = true
