[package]
name = "simple-qc"
version = "0.4.5" 
authors = ["Heru Handika <herubiolog@gmail.com>"]
description = "A quality control cli app for high-throughput sequencing data"
edition = "2018"
readme = "README.md"
repository = "https://github.com/hhandika/simple-qc"
license = "MIT"
categories = ["command-line-utilities", "science"]

[dependencies]
assert_approx_eq = "1.1.0"
clap = "2.33.3"
flate2 = "1.0.19"
glob = "0.3.0"
num-format = "0.4.0"
rayon = "1.5.0"
walkdir = "2.3.1"

[[bin]]
name = "sqc"
path = "src/main.rs"

# Turning on the settings below will slow down compilation speed.
# But, may improve code optimization, depending on 
# the cpu.
# On AMD, I found it slows down the execution runtime.

# [profile.release]
# lto = true